--- a/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail2/RecommendDetail2.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail2/RecommendDetail2.xib
@@ -13,10 +13,12 @@
                 <outlet property="cantHelpButton" destination="o2z-ME-nxH" id="26M-7A-c2c"/>
                 <outlet property="ivAvatar" destination="16" id="41"/>
                 <outlet property="lbName" destination="17" id="36"/>
+                <outlet property="navibarView" destination="gdt-bp-gW7" id="f3H-6g-dVY"/>
                 <outlet property="scrollViewMain" destination="4" id="30"/>
                 <outlet property="tbvFilter" destination="55" id="60"/>
-                <outlet property="tvLongMsg" destination="20" id="40"/>
+                <outlet property="tvLongMsg" destination="Z0o-dG-ZH2" id="R9c-Xz-q57"/>
                 <outlet property="view" destination="1" id="3"/>
+                <outlet property="view1" destination="10" id="c6d-mB-5ev"/>
                 <outlet property="view2" destination="66" id="67"/>
                 <outlet property="view4" destination="79" id="92"/>
             </connections>
@@ -65,8 +67,8 @@
                     </connections>
                 </button>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="4">
-                    <rect key="frame" x="0.0" y="44" width="320" height="460"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="44" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
                         <view contentMode="scaleToFill" id="66">
                             <rect key="frame" x="0.0" y="20" width="320" height="600"/>
@@ -108,7 +110,7 @@
                                         </button>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg100.png" id="48">
                                             <rect key="frame" x="10" y="10" width="300" height="100"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="avatar.png" id="16">
                                             <rect key="frame" x="29" y="19" width="30" height="30"/>
@@ -121,15 +123,6 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" editable="NO" id="20">
-                                            <rect key="frame" x="22" y="60" width="263" height="43"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
                                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="21">
                                             <rect key="frame" x="16" y="46" width="60" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -160,6 +153,13 @@
                                                 <action selector="actionAvatar:" destination="-1" eventType="touchUpInside" id="65"/>
                                             </connections>
                                         </button>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="100" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Z0o-dG-ZH2">
+                                            <rect key="frame" x="29" y="62" width="271" height="35"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -255,6 +255,55 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </scrollView>
+                <view hidden="YES" contentMode="scaleToFill" id="gdt-bp-gW7">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="PPV-4X-7yP" userLabel="Button - others tab">
+                            <rect key="frame" x="10" y="7" width="30" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <state key="normal" image="ic_tab_myprofile.png">
+                                <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="highlighted">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="actionOthersTab:" destination="-1" eventType="touchUpInside" id="6km-Yr-SCM"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="rzK-TH-Lbh">
+                            <rect key="frame" x="84" y="7" width="72" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
+                            <state key="normal" title="All" backgroundImage="bt_55.png">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="disabled" backgroundImage="bt_55.png"/>
+                            <state key="selected" backgroundImage="bt_55.png"/>
+                            <state key="highlighted" backgroundImage="bt_55.png"/>
+                            <connections>
+                                <action selector="actionAllButton:" destination="-1" eventType="touchUpInside" id="BkU-QJ-wB9"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="DID-GR-P1V">
+                            <rect key="frame" x="164" y="7" width="72" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
+                            <state key="normal" title="Shuffle" backgroundImage="rounded_orange.png">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="disabled" backgroundImage="bt_55.png"/>
+                            <state key="selected" backgroundImage="bt_55.png"/>
+                            <state key="highlighted" backgroundImage="bt_55.png"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
@@ -264,7 +313,9 @@
     <resources>
         <image name="avatar.png" width="50" height="50"/>
         <image name="bg100.png" width="300" height="100"/>
+        <image name="bt_55.png" width="55" height="28"/>
         <image name="ic_bt_back.png" width="30" height="30"/>
+        <image name="ic_tab_myprofile.png" width="30" height="30"/>
         <image name="ic_tab_newsfeed.png" width="32" height="28"/>
         <image name="rounded_orange.png" width="120" height="17"/>
         <image name="textfill195_41.png" width="195" height="41"/>
