--- a/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -27,13 +27,13 @@
                             <rect key="frame" x="84" y="7" width="72" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
-                            <state key="normal" title="All" backgroundImage="rounded_orange.png">
+                            <state key="normal" title="Inbox" backgroundImage="rounded_orange.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <state key="disabled" backgroundImage="bt_55.png"/>
-                            <state key="selected" backgroundImage="bt_55.png"/>
-                            <state key="highlighted" backgroundImage="bt_55.png"/>
+                            <state key="disabled" title="Inbox" backgroundImage="bt_55.png"/>
+                            <state key="selected" title="Inbox" backgroundImage="bt_55.png"/>
+                            <state key="highlighted" title="Inbox" backgroundImage="bt_55.png"/>
                             <connections>
                                 <action selector="actionAllButton:" destination="-1" eventType="touchUpInside" id="rsK-07-CdO"/>
                             </connections>
